--- a/src/app/modules/dasboard/dasboard.component.html
+++ b/src/app/modules/dasboard/dasboard.component.html
@@ -12,7 +12,7 @@
 <!--        µµµµµµµµµµ ******************************* µµµµµµµµµµµµµµµµ -->
   <mat-card class="example-card" style="margin-left: 1%; width: 30%;">
     <mat-card-header>
-     <a mat-list-item routerLinkActive="active" routerLink="./naturelle/newnaturelle"  style="text-decoration: none;">
+     <a mat-list-item routerLinkActive="active" routerLink="/newsanitaire"  style="text-decoration: none;">
       <mat-card-title >Catastrophe Sanitaire</mat-card-title> </a>
     </mat-card-header>
     <img mat-card-image src="assets/images/images.jpg" alt="sanitaire" style="height: 90%; width: 110.5%;" >
@@ -21,7 +21,7 @@
   <!-- µµµµµµµµµµµµµµµµµ  *******************************  µµµµµµµµµµµµµµµµµµµµ -->
   <mat-card class="example-card" style="height: 70%; margin-left: 1%  ; width: 30%">
     <mat-card-header>
-    <a mat-list-item routerLinkActive="active" routerLink="./naturel/newnaturelle" style="text-decoration: none;">
+    <a mat-list-item routerLinkActive="active" routerLink="/newsecuritaire" style="text-decoration: none;">
       <mat-card-title style="text-align: center;">Catastrophe Sécuritaire</mat-card-title>
      </a>
     </mat-card-header>
