--- a/src/app/modules/naturelle/new-frequence/new-frequence.component.html
+++ b/src/app/modules/naturelle/new-frequence/new-frequence.component.html
@@ -21,7 +21,7 @@
                     </select>
             </mat-form-field>
               <div >
-                <button mat-button  [routerLink]="['/faq']"  class="btn-danger">retour</button>
+                <button mat-button style="margin-left: -3%;" [routerLink]="['/faq']"  class="btn-danger">retour</button>
           
                 <button  mat-button (click)="newampleur()" 
                 class="btn btn-info" >suivant</button>
