--- a/src/app/modules/naturelle/new-naturelle/new-naturelle.component.html
+++ b/src/app/modules/naturelle/new-naturelle/new-naturelle.component.html
@@ -126,7 +126,7 @@
                 </select>
         </mat-form-field>
         <div >
-          <button mat-button  class="btn-danger"  [routerLink]="['/accueil']"  >quitter</button>
+          <button mat-button  style="margin-left: -3%;" class="btn-danger"  [routerLink]="['/accueil']"  >quitter</button>
           <button  mat-button (click)="newfrequence()" 
           class="btn btn-info" >suivant</button>
      
@@ -136,4 +136,8 @@
 </div>
   </div>
     </div>
+ 
+
+
+
  
