--- a/src/app/modules/naturelle/new-niveaucontrole/new-niveaucontrole.component.html
+++ b/src/app/modules/naturelle/new-niveaucontrole/new-niveaucontrole.component.html
@@ -15,7 +15,7 @@
                     </select>
             </mat-form-field>
               <div >
-                <button mat-button  [routerLink]="['/ampl']"  class="btn-danger">retour</button>
+                <button mat-button style="margin-left: -3%;"  [routerLink]="['/ampleursanitaire']"  class="btn-danger">retour</button>
           
                 <button  mat-button (click)="newcontrole()" 
                 class="btn btn-info" >suivant</button>
