--- a/src/app/modules/naturelle/new-niveauperte/new-niveauperte.component.html
+++ b/src/app/modules/naturelle/new-niveauperte/new-niveauperte.component.html
@@ -15,7 +15,7 @@
                     </select>
             </mat-form-field>
               <div >
-                <button mat-button  [routerLink]="['/controle']"  class="btn-danger">retour</button>
+                <button mat-button style="margin-left: -3%;" [routerLink]="['/controle']"  class="btn-danger">retour</button>
           
                 <button  mat-button  (click)="newperte()"
                 class="btn btn-info" >Recapitulatif</button>
